# rl-trading-bot

./: .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py
rl_trader/: __init__.py  cli.py
rl_trader/api/: __init__.py  main.py
rl_trader/config/: __init__.py  settings.yaml
rl_trader/data/: __init__.py  data_loader.py
rl_trader/models/: __init__.py  agent.py  trading_env.py
rl_trader/tests/: test_api.py  test_data.py  test_env.py
scripts/: create_test_data.py
src/: __init__.py  agent.py  data_loader.py  trading_env.py
