[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-trader"
version = "2.0.0"
description = "Enterprise Reinforcement Learning Trading Bot — PPO ensemble, 42 indicators, FastAPI, Streamlit"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Yaser Shawdfi", email = "paiawon@outlook.com"}]
keywords = ["reinforcement-learning", "trading", "ppo", "finance", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "stable-baselines3>=2.0",
    "gymnasium>=0.29",
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "streamlit>=1.30",
    "plotly>=5.18",
    "matplotlib>=3.7",
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24",  # For FastAPI testing
    "ruff>=0.1",
    "mypy>=1.5",
]
docker = [
    "gunicorn>=21.0",
]

[project.scripts]
rltrader = "rl_trader.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["rl_trader/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]